Remove and add idle timeout when inhibited and unhibited

Ensures that when a dbus inhibition is lifted the idle time
starts anew. Otherwise a new idle timeout would not start
until user activity and we would never lock.
The stored type of the the timeout is changed to double to
make testing with shorter timeouts possible.
BUG: 469687